Redesign button booking page

--- a/homepage/booking.html
+++ b/homepage/booking.html
@@ -155,13 +155,20 @@
                 </div>
             </div>
 
-            <div class="uk-margin">
-                <a target="_blank" href="food.html"><button class="uk-button uk-button-primary uk-align-center uk-marigin-small">Add Meals</button></a>
-                <button class="uk-button uk-button-primary uk-align-center uk-margin-remove-top">Book Tickets</button>
-
+            <div class="uk-margin uk-grid">
+                <div class="uk-width-1-2">
+                    <a target="_blank" href="food.html" class="uk-align-center"><button class="uk-button uk-button-primary uk-align-center uk-marigin-small"><span uk-icon="icon: plus-circle"></span> Add Meals</button></a>
+                </div>
+                <div class="uk-width-1-2">
+                    <button class="uk-button uk-button-primary uk-align-left uk-margin-remove-top"><span uk-icon="icon: check"></span> Book Tickets</button>
+                </div>
             </div>
 
+
+
         </div>
+
+    </div>
     </div>
 
 
