--- a/homepage/result.html
+++ b/homepage/result.html
@@ -77,7 +77,7 @@
 
     <div class="uk-container">
         <div class="uk-card uk-card-default uk-card-body uk-align-center uk-width-1-2@m uk-margin-large-bottom">
-            <div class="uk-card-body uk-padding-remove-bottom">
+            <div class="uk-card-body uk-padding-remove-bottom uk-dark">
                 <div uk-grid>
                     <div class="uk-align-left">
                         <p>From</p>
@@ -89,7 +89,7 @@
                     </div>
                 </div>
             </div>
-            <div class="uk-card-body uk-padding-remove-top">
+            <div class="uk-card-body uk-padding-remove-top uk-dark">
                 <div class="uk-card uk-card-default uk-margin-medium-top">
                     <div class="uk-card-body">
                         <h3>Train name</h3>
@@ -99,7 +99,7 @@
                     </div>
                 </div>
 
-                <div class="uk-card uk-card-default uk-margin-medium-top">
+                <div class="uk-card uk-card-default uk-margin-medium-top uk-dark ">
                     <div class="uk-card-body">
                         <h3>Train name</h3>
                         <p>Train number<br> Date: dd/mm/yyyy<br> Scheduled Arrival: hh:mm<br> Scheduled Departure: hh:mm
@@ -108,7 +108,7 @@
                     </div>
                 </div>
 
-                <div class="uk-card uk-card-default uk-margin-medium-top">
+                <div class="uk-card uk-card-default uk-margin-medium-top uk-dark">
                     <div class="uk-card-body">
                         <h3>Train name</h3>
                         <p>Train number<br> Date: dd/mm/yyyy<br> Scheduled Arrival: hh:mm<br> Scheduled Departure: hh:mm
