--- a/homepage/ticket_n_user.html
+++ b/homepage/ticket_n_user.html
@@ -85,8 +85,12 @@
                 <div class="uk-grid uk-child-width-expand">
                     <div id="seat-map"></div>
                     <div>
-                        <button class="uk-button uk-button-primary uk-width-1-1">Swap Seats</button>
+                        <form>
                         <p>You can swap seats with other passengers by sending them a swap request.</p>
+                        <input class="uk-input uk-margin-small" placeholder="Your seat">
+                        <input class="uk-input uk-margin-small" placeholder="Desired seat">
+                        <button class="uk-button uk-button-primary uk-width-1-1">Swap Seats</button>
+                        </form>
                     </div>
                 </div>
             </div>
