--- a/homepage/ticket_e_user.html
+++ b/homepage/ticket_e_user.html
@@ -115,6 +115,55 @@
     <script src="js/jquery.seat-charts.min.js"></script>
     <script src="js/script.js"></script>
 
+    <script type="text/javascript">
+        $(document).ready(function() {
+
+    var firstSeatLabel = 1;
+    var sc = $('#seat-map').seatCharts({
+        map: [
+            'ccc_b',
+            'ccc_c',
+            'caa_a',
+            'aaa_a',
+            'aaa_a',
+            'aaa_a',
+            'aaa_a',
+            'aaa_a',
+            'aaa_a',
+            'aaa_a'
+        ],
+        naming: {
+            top: false,
+            getLabel: function(character, row, column) {
+                return firstSeatLabel++;
+            }
+        },
+        click: function() {
+            if (this.status() == 'available') {
+                //do some stuff, i.e. add to the cart
+                return 'selected';
+            } else if (this.status() == 'selected') {
+                //seat has been vacated
+                return 'available';
+            } else if (this.status() == 'unavailable') {
+                //seat has been already booked
+                return 'unavailable';
+            } else {
+                return this.style();
+            }
+        },
+        seats: {
+            b: {
+                classes : 'first-class'
+            }
+        }
+    });
+
+    //Make all available 'c' seats unavailable
+    sc.find('c.available').status('unavailable');
+});
+    </script>
+
 </body>
 
 </html>
